<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/tv_downloadFormat_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_downloadFormat"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:viewBindingIgnore="true" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_button_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            app:checkedButton="@id/btn_video"
            app:layout_constraintEnd_toEndOf="@+id/tv_downloadFormat_title"
            app:layout_constraintHorizontal_weight="8"
            app:layout_constraintStart_toStartOf="@+id/tv_downloadFormat_title"
            app:layout_constraintTop_toBottomOf="@id/tv_downloadFormat_title"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_video"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_video" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_audio"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_audio" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textfield_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:hint="@string/hint_container"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/toggle_button_group"
            app:layout_constraintStart_toStartOf="@+id/toggle_button_group"
            app:layout_constraintTop_toBottomOf="@+id/toggle_button_group">

            <AutoCompleteTextView
                android:id="@+id/textfield_container_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:paddingHorizontal="8dp"
                tools:ignore="LabelFor,SpeakableTextPresentCheck"
                tools:text="Default" />
        </com.google.android.material.textfield.TextInputLayout>


        <include
            android:id="@+id/cardview_item"
            layout="@layout/item_download_format"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textfield_container" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>