<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_download_section_title"
        tools:viewBindingIgnore="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/download"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_download_section_description"
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:viewBindingIgnore="true"
        android:text="@string/configure_download_settings"
        app:layout_constraintEnd_toStartOf="@+id/btn_download"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_download_section_title"
        app:layout_constraintTop_toBottomOf="@id/tv_download_section_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@id/btn_download"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:text="@string/download"
        app:icon="@drawable/icon_download"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_title"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:hint="@string/hint_video_title"
        app:layout_constraintEnd_toEndOf="@+id/btn_download"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="@+id/tv_download_section_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_download_section_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textfield_title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_author"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textField_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/textField_title"
        app:layout_constraintTop_toBottomOf="@id/textField_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textfield_author_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_author"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <include
        android:id="@+id/section_downloadFormat"
        layout="@layout/layout_download_format"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textfield_author"
        app:layout_constraintStart_toStartOf="@+id/textfield_author"
        app:layout_constraintTop_toBottomOf="@+id/textfield_author" />

    <include
        android:id="@+id/section_downloadPath"
        layout="@layout/layout_download_path"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/section_downloadFormat"
        app:layout_constraintStart_toStartOf="@+id/section_downloadFormat"
        app:layout_constraintTop_toBottomOf="@id/section_downloadFormat" />



</androidx.constraintlayout.widget.ConstraintLayout>