<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingBottom="16dp"
    android:layout_height="match_parent">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_thumbnail"
        style="@style/roundedImageViewThumbnail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:contentDescription="@string/thumbnail"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drag_handle"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_video_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/img_thumbnail"
        app:layout_constraintStart_toStartOf="@id/img_thumbnail"
        app:layout_constraintTop_toBottomOf="@id/img_thumbnail"
        tools:text="Video title" />


    <TextView
        android:id="@+id/tv_video_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@id/tv_video_title"
        app:layout_constraintStart_toStartOf="@id/tv_video_title"
        app:layout_constraintTop_toBottomOf="@id/tv_video_title"
        tools:text="Video description" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button"
        android:id="@+id/btn_play_remove"
        android:layout_marginTop="4dp"
        android:text="@string/option_play_video"
        app:layout_constraintEnd_toEndOf="@id/img_thumbnail"
        app:layout_constraintTop_toBottomOf="@id/tv_video_description" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:id="@+id/btn_cancel"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/btn_play_remove"
        app:layout_constraintEnd_toStartOf="@id/btn_play_remove"
        app:layout_constraintTop_toTopOf="@+id/btn_play_remove" />


</androidx.constraintlayout.widget.ConstraintLayout>