<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.cardview.CircularRevealCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.Material3.CardView.Elevated"
    app:cardElevation="4dp"
    android:layout_marginBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="32dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingVertical="8dp"
        android:paddingHorizontal="8dp"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/result_img_thumbnail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:contentDescription="@string/thumbnail"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedImageViewThumbnail"
            tools:src="@tools:sample/avatars" />


        <TextView
            android:id="@+id/result_tv_videoTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/result_btn_favorite"
            app:layout_constraintHorizontal_bias="0"
            app:layout_goneMarginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/result_img_thumbnail"
            app:layout_constraintTop_toBottomOf="@id/guideline2"
            tools:text="Video title" />

        <TextView
            android:id="@+id/result_tv_videoDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintEnd_toStartOf="@+id/result_btn_favorite"
            app:layout_constraintStart_toStartOf="@id/result_tv_videoTitle"
            app:layout_constraintTop_toBottomOf="@id/result_tv_videoTitle"
            tools:text="Video description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/result_btn_favorite"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_to_favorite"
            app:icon="@drawable/icon_favorite"
            app:layout_constraintBottom_toBottomOf="@+id/result_tv_videoDescription"
            app:layout_constraintEnd_toEndOf="@id/result_img_thumbnail"
            app:layout_constraintTop_toTopOf="@+id/result_tv_videoTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/result_btn_download"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:includeFontPadding="true"
            android:text="@string/download"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textStyle="bold"
            app:iconGravity="end"
            app:layout_constraintEnd_toEndOf="@id/result_img_thumbnail"
            app:layout_constraintStart_toStartOf="@+id/result_tv_videoDescription"
            app:layout_constraintTop_toBottomOf="@id/result_tv_videoDescription" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="140dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.circularreveal.cardview.CircularRevealCardView>


